attempt at custom layer but still not working

--- a/template.yaml
+++ b/template.yaml
@@ -65,7 +65,7 @@ Resources:
                     - app.ts
                 External:
                     - "axios"
-                    - "commands"
+                    - "/opt/nodejs/commands"
     ByeWorldFunction:
         Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
         Properties:
@@ -88,7 +88,7 @@ Resources:
                     - app.ts
                 External:
                     - "axios"
-                    - "commands"
+                    - "/opt/nodejs/commands"
 
 Outputs:
     # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
