--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
     "compilerOptions": {
         "target": "es2020",
+        "module": "es2015",
         "strict": true,
         "preserveConstEnums": true,
         "noEmit": true,
         "sourceMap": false,
-        "module": "es2015",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "paths": {
-            "commands": ["./src/layers/code/nodejs/commands.ts"]
+            "/opt/nodejs/commands": ["./src/layers/code/nodejs/commands"]
         }
     },
     "exclude": ["node_modules", "**/*.test.ts", "**/*/node_modules"],
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts", "src/layers/code/nodejs/commands/index.js", "nodejs/**/*.ts"]
 }
