--- a/template.yaml
+++ b/template.yaml
@@ -28,9 +28,11 @@ Resources:
         Properties:
             LayerName: CommonLayer
             Description: Common code layer.
-            ContentUri: "src/layers/code/"
+            ContentUri: "src/layers/codeLayer/"
             CompatibleRuntimes:
                 - nodejs16.x
+        Metadata:
+            BuildMethod: makefile
 
     HelloWorldFunction:
         Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -43,7 +45,7 @@ Resources:
             Tracing: Active
             Layers:
                 - !Ref DepsLayer
-                # - !Ref CodeLayer
+                - !Ref CodeLayer
             Environment:
                 Variables:
                     POWERTOOLS_SERVICE_NAME: helloWorld
@@ -65,7 +67,7 @@ Resources:
                     - app.ts
                 External:
                     - "axios"
-                    # - "/opt/nodejs/commands"
+                    - "/opt/nodejs"
     ByeWorldFunction:
         Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
         Properties:
@@ -77,7 +79,7 @@ Resources:
             Tracing: Active
             Layers:
                 - !Ref DepsLayer
-                # - !Ref CodeLayer
+                - !Ref CodeLayer
         Metadata: # Manage esbuild properties
             BuildMethod: esbuild
             BuildProperties:
@@ -88,7 +90,7 @@ Resources:
                     - app.ts
                 External:
                     - "axios"
-                    # - "/opt/nodejs/commands"
+                    - "/opt/nodejs"
 
 Outputs:
     # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
