--- a/src/layers/codeLayer/Makefile
+++ b/src/layers/codeLayer/Makefile
@@ -1,4 +1,6 @@
 build-CodeLayer:
 	mkdir -p "$(ARTIFACTS_DIR)/nodejs"
-	tsc index.ts
+	npm install
+	npm install typescript
+	npx tsc index.ts --esModuleInterop
 	cp *.js "$(ARTIFACTS_DIR)/nodejs"
