--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
         }
     },
     "exclude": ["node_modules", "**/*.test.ts", "**/*/node_modules"],
-    "include": ["src/**/*.ts", "src/layers/codeLayer/nodejs/commands/index.js", "nodejs/**/*.ts"]
+    "include": ["src/**/*.ts", "nodejs/**/*.ts"]
 }
